<resources>
    <string name="app_name">WakeWheel</string>

    <string name="device_status_during">Start pairing your device</string>
    <string name="device_status_success">Device successfully paired</string>
    <string name="device_status_fail">Device pair fails</string>
    <string name="device_status_timeout">Device pair fails. Connecting timeouts.</string>
    <string name="device_status_no_heart_rate">Cannot establish connection. No heart rate received.</string>
    <string name="location_permissions_rationale">This permissions is necessary to search Bluetooth devices, if you deny it permanently you will not be able to use the app fully functional !</string>
    <string name="permission_denied_message">You permanently denied needed permissions. To perform this action please go to this app settings and enable needed permissions.</string>
    <string name="bpm" translatable="false">bpm</string>
    <string name="start_monitoring">Start monitoring</string>
    <string name="stop_monitoring">Stop monitoring</string>
    <string name="feedback_request">Please give feedback</string>
    <string name="alarm_question">Was this alarm triggered at the right time?</string>
    <string name="dismiss">dismiss</string>
    <string name="alarm" translatable="false">ALARM !</string>
    <string name="sleep_monitoring">Sleep monitoring</string>
    <string name="bluetooth_device_manager">Bluetooth device manager</string>
    <string name="alarm_message">You probably fall asleep! Wake up!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="grant">grant</string>
    <string name="deny">deny</string>
    <string name="devices_list">Devices list</string>
    <string name="device">Device</string>
    <string name="address_with_colon">Address:</string>
    <string name="pair">Pair</string>
    <string name="search_device">Search for new device</string>
    <string name="connect_your_device">Connect your device</string>
    <string name="heart_rate_with_colon">Heart Rate:</string>
    <string name="device_with_colon">Device:</string>
    <string name="your_device">your device</string>
    <string name="no_value">no value</string>
    <string name="no_paired_device">no paired device</string>
    <string name="eyes_receive_gap_warning">Cannot recognize eyes closure. Please set camera in front on your face or try white background to light it.</string>
    <string name="heart_rate_calibration">Heart rate calibration</string>
    <string name="current_threshold_value_with_colon">Current threshold value:</string>
    <string name="set">Set</string>
    <string name="new_threshold_value">New threshold value</string>
    <string translatable="false" name="welcome">Witaj !</string>
    <string translatable="false" name="splash_description">Aplikacja, której właśnie używasz ma za zadanie wykrywać stany twojego zmęczenia za kierownicą i zaalarmować Cię gdy wykryje możliwość zaśnięcia. \n\nAplikacja wykorzystuje w tym celu pomiar pulsu oraz wykrywanie zamknięcia oczu. Aby uzyskać najlepsze rezultaty, korzystaj z obu metod jednocześnie. \n\n Szerokiej drogi !</string>
</resources>
