<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight"
    android:keepScreenOn="true">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDark"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/your_device"
        android:textAllCaps="true"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deviceCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/primaryDark"
        android:elevation="@dimen/elevation_default"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <TextView
            android:id="@+id/device_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/device_with_colon"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toEndOf="@id/device_label"
            app:layout_constraintTop_toTopOf="@id/device_label"
            tools:text="Heart rate sensor" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/address_with_colon"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_label" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toEndOf="@id/address_label"
            app:layout_constraintTop_toTopOf="@id/address_label"
            tools:text="00:00:00:00:00" />

        <TextView
            android:id="@+id/heart_rate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/heart_rate_with_colon"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_label" />

        <TextView
            android:id="@+id/no_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/no_paired_device"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/heart_rate_label"
            app:layout_constraintStart_toEndOf="@id/heart_rate_label"
            app:layout_constraintTop_toTopOf="@id/heart_rate_label" />

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="@id/heart_rate_label"
            app:layout_constraintStart_toEndOf="@id/heart_rate_label"
            app:layout_constraintTop_toTopOf="@id/heart_rate_label"
            tools:text="70" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/device_search"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"

        style="@style/customButtonStyle"
        android:text="@string/search_device"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bluetoothCard" />


<LinearLayout
    android:id="@+id/bluetoothCard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/primaryDark"
    android:padding="@dimen/padding_default"
    android:orientation="horizontal"
    app:layout_constraintBottom_toTopOf="@id/device_search"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/deviceCard"
    app:layout_constraintVertical_chainStyle="packed">

    <ImageView
        android:id="@+id/bluetooth"
        android:layout_width="@dimen/icon_size_very_large"
        android:layout_height="@dimen/icon_size_very_large"
        android:src="@drawable/icon_bluetooth_connected_black_24dp"
        android:layout_gravity="center"/>

    <ImageButton
        android:id="@+id/connect_paired_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_default"
        android:background="@drawable/circle_button_background"
        android:padding="@dimen/padding_default"
        android:src="@drawable/ic_autorenew_black" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>