<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_monitoring"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight">

    <FrameLayout
        android:id="@+id/camera_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/alarm_background_ok"
        app:layout_constraintBottom_toTopOf="@id/container_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.otaliastudios.cameraview.CameraView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:keepScreenOn="true"
            app:cameraAudio="off"
            app:cameraFacing="front" />
    </FrameLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/container_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <LinearLayout
        android:id="@+id/heart_rate_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/alarm_background_ok"
        android:elevation="@dimen/elevation_default"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_container"
        app:layout_constraintBottom_toTopOf="@id/monitoring_button_container">

        <TextView
            android:id="@+id/heart_rate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/heart_rate_with_colon"
            android:textSize="@dimen/text_large" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_large"
            tools:text="120" />

        <TextView
            android:id="@+id/bpm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:text="@string/bpm"
            android:textSize="@dimen/bpm_text_size"
            android:visibility="gone" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/monitoring_button_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_margin="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_monitoring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/start_monitoring"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stop_monitoring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stop_monitoring"
            android:visibility="gone" />
    </FrameLayout>

    <ImageView
        android:id="@+id/bluetooth"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:padding="@dimen/padding_default"
        android:background="@drawable/circle_button_background_primary"
        android:layout_margin="@dimen/margin_default"
        android:src="@drawable/icon_bluetooth_connected_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/camera_container"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/bluetooth_settings"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:padding="@dimen/padding_default"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/circle_button_background"
        android:src="@drawable/icon_settings_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_container"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>