<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/primaryDark"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/heart_rate_calibration"
        android:textAllCaps="true"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/primaryDark"
        android:elevation="@dimen/elevation_default"
        app:layout_constraintBottom_toTopOf="@id/set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/padding_default"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            android:id="@+id/currentValue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_threshold_value_with_colon"
            android:textSize="@dimen/text_large"
            android:layout_margin="@dimen/margin_default"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/thresholdLabel"
            app:layout_constraintEnd_toStartOf="@+id/currentValue"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/thresholdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/new_threshold_value"
            app:layout_constraintBottom_toTopOf="@id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentValue_label"/>

        <TextView
            android:id="@+id/currentValue"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="@id/currentValue_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currentValue_label"
            app:layout_constraintTop_toTopOf="@id/currentValue_label"
            tools:text="55" />

        <TextView
            android:id="@+id/seekBar_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="@id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/seekBar"
            app:layout_constraintTop_toTopOf="@id/seekBar"
            tools:text="50" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@android:style/Widget.DeviceDefault.Light.SeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="20"
            android:progress="1"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/seekBar_value"
            app:layout_constraintTop_toBottomOf="@id/thresholdLabel"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsCard" />

</androidx.constraintlayout.widget.ConstraintLayout>